--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev src/server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +32,8 @@
     "jest": "^29.0.3",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0"
   }
 }
