--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/server",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc --build"
   },
   "keywords": [],
@@ -26,9 +26,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.0.1",
+    "@types/jest": "^29.0.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.0.3",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
