--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "supertest": "^6.2.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "websocket": "^1.0.34",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,10 +33,10 @@
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "jest": "^29.0.3",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0"
+    "typescript": "^4.8.3"
   }
 }
